# bot-itika

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/bot_itika/: __init__.py  context.txt  llm.py  main.py
