[project]
name = "bot-itika"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "trasta", email = "trasta298@gmail.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "google-generativeai>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bot_itika"]
